# face-tracking

./: CMakeLists.txt  README.md  cloud4.pcd
include/: Point.hpp  PositionModel.h  PositionModel.hpp  camera_grabber.h  position_model.h  registration.h  tracker.h
src/: Point.cpp  PositionModel.cpp  camera_grabber.cpp  main.cpp  position_model.cpp  registration.cpp  tracker.cpp
